# Image_Classification_Web_App_Team_3

./: .dockerignore  DenseNet_test.ipynb  Dockerfile  README.md  README_v2.md  Test_photo.ipynb  WebML-app.py  environment.yml  flask_app.py  pyproject.toml  requirements.txt  style.css  test.ipynb  trained_model  trained_model_v3_1
.streamlit/: pages.toml  secrets.toml
NN_test/: CNN_model_project.ipynb  DenseNet_test.ipynb  VGG16_test.ipynb  Xception_test.ipynb  app_web.py  test.ipynb  xception.ipynb  xception.py  xception_new.ipynb
NN_test/Skravchenko_model/: ReadMe.txt  ResNet50_cifar10.ipynb  ResNet50_cifar10.py  ResNet50_cifar10_resize_layer.ipynb  model_data.json
NN_test/Skravchenko_model/100x100 3epoch bath128/: model_data.json
NN_test/Skravchenko_model/32x32 19epoch bath128 mentor data prepea/: model_data.json
NN_test/Skravchenko_model/64x64 50epoch bath128/: model_data.json
NN_test/fixed_cnn/: CNN_model_updated.ipynb
NN_test/updated_cnn/: CNN_model_v3.ipynb  history-3.csv
NN_test/updated_cnn/trained_model_v3/: keras_metadata.pb
function/: function.py  sidebar.py
manual_test/: Test_photo.ipynb
model-data/: history_updated.csv  model_data.json
pages/: 1_Predict.py  2_Model-data.py  GPT Clone.py
pictures/: images.jfif
templates/: response.html  upload.html
tests/: test.py  test.txt  test_function.py
trained_models/: .gitattributes  trained_model_cnn_updated.h5  trained_model_densenet.h5
